separate test fields

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 				border-right: 1px solid #eee;
 			}
 		</style>
-		<input type="text" id="textfield" />
+		<input type="text" id="textContext" />
+		<input type="text" id="textMain" />
 		<div id="container"></div>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
